my-test/testsuite_scan/ir/SingleSource/UnitTests/Vector/LSX/lsx-vfcmp_ceq.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfcmp_ceq.c:7:3: error: use of undeclared identifier '__m128i'
    7 |   __m128i __m128i_out, __m128i_result;
      |   ^~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfcmp_ceq.c:8:3: error: unknown type name '__m128'; did you mean '__mfp8'?
    8 |   __m128  __m128_out, __m128_result;
      |   ^~~~~~
      |   __mfp8
note: '__mfp8' declared here
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfcmp_ceq.c:9:3: error: use of undeclared identifier '__m128d'
    9 |   __m128d __m128d_out, __m128d_result;
      |   ^~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfcmp_ceq.c:10:3: error: use of undeclared identifier 'v2u64'
   10 |   v2u64 v2u64_op0, v2u64_op1, v2u64_op2;
      |   ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfcmp_ceq.c:11:3: error: use of undeclared identifier 'v4i32'
   11 |   v4i32 v4i32_op0, v4i32_op1, v4i32_op2;
      |   ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfcmp_ceq.c:19:3: error: use of undeclared identifier 'v4i32_op0'
   19 |   v4i32_op0 = (v4i32){0x00000000, 0x00000000, 0x00000000, 0x00000000};
      |   ^~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfcmp_ceq.c:19:16: error: use of undeclared identifier 'v4i32'
   19 |   v4i32_op0 = (v4i32){0x00000000, 0x00000000, 0x00000000, 0x00000000};
      |                ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfcmp_ceq.c:20:3: error: use of undeclared identifier 'v4i32_op1'
   20 |   v4i32_op1 = (v4i32){0x00000000, 0x00000000, 0x00000000, 0x00000000};
      |   ^~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfcmp_ceq.c:20:16: error: use of undeclared identifier 'v4i32'
   20 |   v4i32_op1 = (v4i32){0x00000000, 0x00000000, 0x00000000, 0x00000000};
      |                ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfcmp_ceq.c:21:3: error: use of undeclared identifier '__m128i_result'; did you mean '__m128_result'?
   21 |   __m128i_result = (__m128i){0xffffffffffffffff, 0xffffffffffffffff};
      |   ^~~~~~~~~~~~~~
      |   __m128_result
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfcmp_ceq.c:8:23: note: '__m128_result' declared here
    8 |   __m128  __m128_out, __m128_result;
      |                       ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfcmp_ceq.c:21:21: error: use of undeclared identifier '__m128i'
   21 |   __m128i_result = (__m128i){0xffffffffffffffff, 0xffffffffffffffff};
      |                     ^~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfcmp_ceq.c:22:3: error: use of undeclared identifier '__m128i_out'; did you mean '__m128_out'?
   22 |   __m128i_out = __lsx_vfcmp_ceq_s((__m128)v4i32_op0, (__m128)v4i32_op1);
      |   ^~~~~~~~~~~
      |   __m128_out
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfcmp_ceq.c:8:11: note: '__m128_out' declared here
    8 |   __m128  __m128_out, __m128_result;
      |           ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfcmp_ceq.c:22:17: error: call to undeclared function '__lsx_vfcmp_ceq_s'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   22 |   __m128i_out = __lsx_vfcmp_ceq_s((__m128)v4i32_op0, (__m128)v4i32_op1);
      |                 ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfcmp_ceq.c:22:36: error: use of undeclared identifier '__m128'; did you mean '__mfp8'?
   22 |   __m128i_out = __lsx_vfcmp_ceq_s((__m128)v4i32_op0, (__m128)v4i32_op1);
      |                                    ^~~~~~
note: '__mfp8' declared here
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfcmp_ceq.c:22:55: error: use of undeclared identifier '__m128'; did you mean '__mfp8'?
   22 |   __m128i_out = __lsx_vfcmp_ceq_s((__m128)v4i32_op0, (__m128)v4i32_op1);
      |                                                       ^~~~~~
note: '__mfp8' declared here
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfcmp_ceq.c:23:18: error: use of undeclared identifier '__m128i_result'; did you mean '__m128_result'?
   23 |   check_lsx_out(&__m128i_result, &__m128i_out, sizeof(__m128i_out), __FILE__, __LINE__);
      |                  ^~~~~~~~~~~~~~
      |                  __m128_result
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfcmp_ceq.c:8:23: note: '__m128_result' declared here
    8 |   __m128  __m128_out, __m128_result;
      |                       ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfcmp_ceq.c:23:35: error: use of undeclared identifier '__m128i_out'; did you mean '__m128_out'?
   23 |   check_lsx_out(&__m128i_result, &__m128i_out, sizeof(__m128i_out), __FILE__, __LINE__);
      |                                   ^~~~~~~~~~~
      |                                   __m128_out
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfcmp_ceq.c:8:11: note: '__m128_out' declared here
    8 |   __m128  __m128_out, __m128_result;
      |           ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfcmp_ceq.c:23:55: error: use of undeclared identifier '__m128i_out'; did you mean '__m128_out'?
   23 |   check_lsx_out(&__m128i_result, &__m128i_out, sizeof(__m128i_out), __FILE__, __LINE__);
      |                                                       ^~~~~~~~~~~
      |                                                       __m128_out
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfcmp_ceq.c:8:11: note: '__m128_out' declared here
    8 |   __m128  __m128_out, __m128_result;
      |           ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfcmp_ceq.c:25:3: error: use of undeclared identifier 'v4i32_op0'
   25 |   v4i32_op0 = (v4i32){0x00000000, 0x00000000, 0x00000000, 0x00000000};
      |   ^~~~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
